<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.tenantsrightsquiz.MainActivity">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/description1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description1"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/question1" />

        <CheckBox
            android:id="@+id/checkbox_Federal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Federal" />

        <CheckBox
            android:id="@+id/checkbox_State"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/State" />

        <CheckBox
            android:id="@+id/checkbox_County"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/County" />

        <CheckBox
            android:id="@+id/checkbox_City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/City" />

        <TextView
            android:id="@+id/q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description1"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_departmentalenforcementSDCI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:orientation="vertical"
                android:text="@string/SDCI" />

            <RadioButton
                android:id="@+id/radio_departmentalenforcementDPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:orientation="vertical"
                android:text="@string/DPD" />

            <RadioButton
                android:id="@+id/radio_departmentalenforcementOHE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:orientation="vertical"
                android:text="@string/OHE" />

            <RadioButton
                android:id="@+id/radio_departmentalenforcementSPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:orientation="vertical"
                android:text="@string/SPD" />
        </RadioGroup>
        <TextView
        android:id="@+id/q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description1"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:text="@string/question3"/>
        <EditText
            android:id="@+id/q3SDCI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question3"
            android:inputType="text"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description1"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/question4"/>
        <EditText
            android:id="@+id/q4OHE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question4"
            android:inputType="text"
            android:textSize="16sp" />
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
